explore page created and fully functional, landing page updated as well

--- a/public/stylesheets/landing.css
+++ b/public/stylesheets/landing.css
@@ -1,7 +1,7 @@
-#customerBtns {
-    float: left;
+.indexBtnHolder{
+    margin-top: 5%;
 }
 
-#restaurantBtns {
-    float: right;
+.indexButtons{
+    width:49%;
 }
