landing page updated, image formatting and new png

--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -37,18 +37,20 @@
                     </div>
             </div>
             <div style="float:left; width: 50%; height: 73%;">
-                <img src="/uploads/landingPage/topImage.jpg" style="height: 100%; object-fit: cover; object-position: 0% 0; opacity: 0.8">
+                <img src="/uploads/landingPage/topImage.jpg" style="height: 100%; width:100%; object-fit: cover; object-position: 0% 0; opacity: 0.8">
             </div>
 
             <div style="float:left; width: 50%; height: 88%; padding: 0% 0% 9% 0%">
-                <img src="/uploads/landingPage/Image2.jpg" style="height: 100%; object-fit: cover; object-position: 0% 0; opacity: 0.8">
+                <img src="/uploads/landingPage/Image2.jpg" style="height: 100%; width:100%; object-fit: cover; object-position: 0% 0; opacity: 0.8">
             </div>
-            <div style="float:left; width: 50%; height: 73%; padding: 8% 1% 0 1%">
+            <div style="float:left; width: 50%; height: 73%; padding: 3% 1% 0 1%">
                 <h2 class="display-4" style="text-align: center;">Who are we?</h2>
                 <p class="lead" style="text-align: center; font-weight: 500;">We are more than just a 'food ordering' app</p>
                 <p class="lead" style="text-align: center; font-weight: 350;">Our vision is to connect customers and restaurant owners to each other.
                 By means such as stories from restaurants and the social interaction of customers, we believe cuisine in Scarborough
                 will grow and gain the reputation of other areas in Toronto.</p>
+                <!--Icon made by Freepik from www.flaticon.com-->
+                <img src="/uploads/landingPage/group.png" style="height: 30%; display: block; margin-left: auto; margin-right: auto;">
                 <div >
 
                 </div>
