update profile not working however fixed phone number checking and login ui

--- a/views/Customer_Form_Update.ejs
+++ b/views/Customer_Form_Update.ejs
@@ -29,9 +29,9 @@
             <div class="col-lrg-3"></div>
             <div class="col-lrg-6">
                <div id="ui">
-                  <h1 class="text-center">REGISTRATION FORM</h1>
-                  <br>
-                  <form action="/makeCustomer/" method = "post" sclass="form-group">
+                  <h1 class="text-center">UPDATE FORM</h1>
+                 <br>
+                  <form action="/updateCustomer/" method = "post" class="form-group">
                      <h3 class="text-center">Customer Information</h3>
                      <br>
                      <div class="row">
