--- a/views/Registration_Form.ejs
+++ b/views/Registration_Form.ejs
@@ -43,7 +43,7 @@
 
 							<div class="col-lg-6">
 								<label>Business phone:</label>
-								<input required="required" type="text" name="phoneNumber" class="form-control" placeholder="Enter your business phone">
+								<input required="required" type="text" pattern="^\d{3}-\d{3}-\d{4}$" title="Example: 403-321-1230" name="phoneNumber" class="form-control" placeholder="Enter your business phone">
 							</div>
 							
 						</div>
@@ -77,6 +77,7 @@
 						<div class="row">
 							<div class="col-lg-6">
 								<label>Title:</label>
+
 								<input required="required" type="text" name="ownerTitle" class="form-control" placeholder="Enter your title">
 							</div>
 
@@ -91,7 +92,7 @@
 						<div class="row">
 							<div class="col-lg-6">
 								<label>Phone number:</label>
-								<input required="required" type="text" name="ownerPhoneNumber" class="form-control" placeholder="Enter your phone number">
+								<input required="required" type="text" pattern="^\d{3}-\d{3}-\d{4}$" title="Example: 403-321-1230" name="ownerPhoneNumber" class="form-control" placeholder="Enter your phone number">
 							</div>
 
 							<div class="col-lg-6">
