--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -17,14 +17,15 @@
             <p>New or Returning user?</p>
             <span id="customerBtns">
                 <a class="btn btn-primary" href="/customerSignup/"  role="button">Customer Sign Up</a>
-                <a class="btn btn-success" href="/:customerFirstName/:customerLastName/customerProfile"role="button">Customer Login In</a>
+                <a class="btn btn-success" data-toggle="modal" data-target="#loginModal" href="/" role="button">Customer Login In</a>
+                <%- include('./partials/loginCustomer.ejs') %>
             </span>
             <span id="restaurantBtns">
                 <a class="btn btn-primary" href="/restaurantSignup/" role="button">Restaurant Sign Up</a>
-                <a class="btn btn-success" href="/:restaurant/restuarantProfile" role="button">Restaurant Login In</a>
+                <a class="btn btn-success" data-toggle="modal" data-target="#loginModal" href="/" role="button">Restaurant Login In</a>
+                <%- include('./partials/loginRestaurant.ejs') %>
             </span>
         </div>
-
         <!-- CSS only for bootstrap--> 
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     </body>
