--- a/views/restaurant.ejs
+++ b/views/restaurant.ejs
@@ -35,7 +35,7 @@
                             <div class="restaurantInfo" class="card-text restaurantInfo"><%= restaurant.title %> <%= restaurant.ownerFirstName %> <%= restaurant.ownerLastName %></div>
                             <br>
                             <a class="btn btn-outline-primary btn-sm" href="#" role="button">More Info</a>
-                            <a class="btn btn-outline-primary btn-sm" href="/restaurants/<%=restaurant._id%>/reviews?p=1" role="button">Reviews</a>
+                            <a class="btn btn-outline-primary btn-sm" href="/<%=restaurant._id%>/reviews?p=1" role="button">Reviews</a>
                         </div>
                     </div>
                     <div class = "d-flex flex-column" style="width: 70%;">
