--- a/views/reviews.ejs
+++ b/views/reviews.ejs
@@ -90,11 +90,11 @@
         </ul>
         <div class="row justify-content-end">
             <a role="button" class="btn btn-outline-dark btn-sm mr-1 <% if (page <= 1) {%> disabled <% }; %>"
-                href="/restaurants/<%=restaurant._id%>/reviews?p=<%=Number(page)-1%>">Last Page</a>
+                href="/<%=restaurant._id%>/reviews?p=<%=Number(page)-1%>">Last Page</a>
             <%=page%> of <%=Math.ceil(restaurant.reviews.length / 10)%>
             <a role="button"
                 class="btn btn-outline-dark btn-sm ml-1 <% if (page >= Math.ceil(restaurant.reviews.length / 10)) {%> disabled <% }; %>"
-                href="/restaurants/<%=restaurant._id%>/reviews?p=<%=Number(page)+1%>">Next Page</a>
+                href="/<%=restaurant._id%>/reviews?p=<%=Number(page)+1%>">Next Page</a>
         </div>
     </div>
     
