fixed analytics route to use id instead of name for querying for the restaurant

--- a/views/restaurant.ejs
+++ b/views/restaurant.ejs
@@ -23,7 +23,7 @@
                 <% } %>
                 <a class="btn btn-outline-primary" href="/<%=restaurant.nameSpaced.replace(/ /g, "-")%>/menu?p=1" role="button">Order Now</a>
                 &nbsp;&nbsp;|&nbsp;&nbsp; 
-                <a class="btn btn-primary" href="/<%=restaurant.nameSpaced.replace(/ /g, "-")%>/analytics" role="button">Analytical Dashboard</a>
+                <a class="btn btn-primary" href="/<%=restaurant._id%>/analytics" role="button">Analytical Dashboard</a>
                 
             </h4>
             <div class =" d-flex flex-row align-items-start justify-content-around ">
