--- a/public/stylesheets/profilePage.css
+++ b/public/stylesheets/profilePage.css
@@ -15,7 +15,7 @@ body, html {
 }
 .bg {
   /* The image used */
-  background-image: url('https://mdbootstrap.com/img/Photos/Others/architecture.jpg');
+  background-color: #659EC7;
 
   /* Full height */
   height: 50%;
@@ -25,38 +25,6 @@ body, html {
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-}
-.complex_form{
-    margin-top:40px;
-    margin-left:20px;
-    border-radius: 10px;
-    padding: 10px;
-    display:flex;
-    flex-direction: column;
-    height: 75%;
-    width: 100%;
-}
-
-.complex_form .form_title{
-    font-size:20px;
-    margin-bottom: 20px;
-    font-weight:bold;
-    text-align: center;
-    color:white;
-    background-color: #3C3D3F;
-
-}
-
-
-.complex_form .form_element{
-     margin-bottom:10px;
-     font-size: 20px;
-     border-radius:15px;
-
-}
-.complex_form .button{
- background-color: #008CBA;
- margin-top: 20px;
 }
 
 .restaurantInfo {
