--- a/views/restaurant.ejs
+++ b/views/restaurant.ejs
@@ -34,7 +34,11 @@
                             <div class="restaurantInfo restaurantInfoTitle"> Restaurant Owner </div>
                             <div class="restaurantInfo" class="card-text restaurantInfo"><%= restaurant.title %> <%= restaurant.ownerFirstName %> <%= restaurant.ownerLastName %></div>
                             <br>
+                            <div class =" d-flex flex-row align-items-start justify-content-around ">
                             <a class="btn btn-outline-primary btn-sm" href="#" role="button">More Info</a>
+                            <a class="btn btn-outline-primary btn-sm" href="/restaurantSignup/" role="button">Edit Profile</a>
+                            </div>
+
                         </div>
                     </div>
                     <div class = "d-flex flex-column" style="width: 70%;">
