deleted update form

--- a/views/customerProfile.ejs
+++ b/views/customerProfile.ejs
@@ -23,7 +23,7 @@
          <div class = "card-body">
                <div class = "d-flex flew-row" >
             <h5 class="card-title"><%= customerInfo.customerFirstName%> <%= customerInfo.customerLastName%></h5>
-             <a class="btn btn-primary ml-auto"style="margin-top: -10;"  href="/customerUpdate/"+<%= customerInfo.customerFirstName%>+"/" +<%= customerInfo.customerLastName%>+"/"  role="button">Update Info</a>
+             <a class="btn btn-primary ml-auto"style="margin-top: -10;"  href="/customerSignup/"+<%= customerInfo.customerFirstName%>+"/" +<%= customerInfo.customerLastName%>+"/"  role="button">Update Info</a>
             </div>
             <div class="card-header ">
                Info
