--- a/views/Customer_Form.ejs
+++ b/views/Customer_Form.ejs
@@ -37,19 +37,19 @@
                      <div class="row">
                         <div class="col-lg-6">
                            <label>First name:</label>
-                           <input type="text" name="customerFirstName" class="form-control" placeholder="Enter your first name">
+                           <input required="required"  type="text" name="customerFirstName" class="form-control" placeholder="Enter your first name">
                         </div>
                         <div class="col-lg-6">
                            <label>Last name:</label>
-                           <input type="text" name="customerLastName" class="form-control" placeholder="Enter your last name">
+                           <input required="required"  type="text" name="customerLastName" class="form-control" placeholder="Enter your last name">
                         </div>
                         <div class="col-lg-6">
                             <label>Bio:</label>
-                             <textarea  class="form-control" name="customerBio" placeholder="Enter your bio"></textarea>
+                             <textarea required="required"  class="form-control" name="customerBio" placeholder="Enter your bio"></textarea>
                         </div>
                         <div class="col-lg-6">
                                                    <label>Address:</label>
-                                                   <input type="text" name="customerAddress" class="form-control" placeholder="Enter your last name">
+                                                   <input required="required"  type="text" name="customerAddress" class="form-control" placeholder="Enter your last name">
                                                 </div>
                        </div>
                      <br>
@@ -75,11 +75,11 @@
                      <div class="row">
                         <div class="col-lg-6">
                            <label>Phone number:</label>
-                           <input id="phonenum" type="tel" pattern="^\d{3}-\d{3}-\d{4}$" title="Example: 403-321-1230" name="customerPhoneNumber" class="form-control" placeholder="Enter your phone number">
+                           <input required="required"  id="phonenum" type="tel" pattern="^\d{3}-\d{3}-\d{4}$" title="Example: 403-321-1230" name="customerPhoneNumber" class="form-control" placeholder="Enter your phone number">
                         </div>
                         <div class="col-lg-6">
                            <label>Password:</label>
-                           <input type="password" name="password" class="form-control" placeholder="Enter your password">
+                           <input required="required"  type="password" name="password" class="form-control" placeholder="Enter your password">
                         </div>
                      </div>
                      <br>
