--- a/views/Customer_Form.ejs
+++ b/views/Customer_Form.ejs
@@ -10,17 +10,7 @@
    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-      <style type="text/css">
-         #ui{
-         background-color: #333;
-         padding:30px;
-         margin-top: 20px;
-         border-radius: 10px;
-         }
-         #ui label, h1, h3{
-         color: #fff;
-         }
-      </style>
+   <link rel="stylesheet" href="/stylesheets/form.css">
    </head>
    <body>
       <%- include('./partials/navbar.ejs') %>
@@ -29,10 +19,9 @@
             <div class="col-lrg-3"></div>
             <div class="col-lrg-6">
                <div id="ui">
-                  <h1 class="text-center">REGISTRATION FORM</h1>
+                  <h1 class="text-center">Customer Sign Up</h1>
                   <br>
                   <form action="/makeCustomer/" method = "post" sclass="form-group">
-                     <h3 class="text-center">Customer Information</h3>
                      <br>
                      <div class="row">
                         <div class="col-lg-6">
@@ -45,37 +34,40 @@
                         </div>
                         <div class="col-lg-6 pt-3">
                             <label class = " mb-3">Bio:</label>
-                             <textarea  class="form_element" style="margin: 0px; width: 541px; height: 113px" name="customerBio" placeholder="Enter your bio"></textarea>
+                             <textarea class="form_element" style="margin: 0px; width: 525px; height: 113px" name="customerBio" placeholder="Enter your bio"></textarea>
                         </div>
-                        <div class="col-lg-6">
-                                                   <label>Adress:</label>
-                                                   <input type="text" name="customerAddress" class="form-control" placeholder="Enter your last name">
-                                                </div>
+                        <div style="padding-top: 1rem!important;" class="col-lg-6">
+                              <label style="margin-bottom: 1rem!important;">Adress:</label>
+                              <input type="text" name="customerAddress" class="form-control" placeholder="Enter your Address">
+                           </div>
                        </div>
                      <br>
                      <div class="row">
                         <div class="col-lg-6">
                            <label>Facebook (optional):</label>
-                           <input type="text" name="facebookUrl" class="form-control" placeholder="Enter your title">
+                           <input type="text" name="facebookUrl" class="form-control" placeholder="Enter your Title">
                         </div>
                          <div class="col-lg-6">
                             <label> Twitter (optional) :</label>
                            <input type="text" name="twitterUrl" class="form-control" placeholder="Enter your Facebook Url">
                          </div>
-                         <div class="col-lg-6">
-                                                     <label> Linkedin (optional) :</label>
-                                                    <input type="text" name="linkedinUrl" class="form-control" placeholder="Enter your LinkedinUrl">
-                                                  </div>
+                     </div>
+                     <br>
+                     <div class="row">
                         <div class="col-lg-6">
-                           <label>E-mail:</label>
-                           <input type="text" name="ownerEmail" class="form-control" placeholder="Enter your Twitter Url">
+                           <label> Linkedin (optional) :</label>
+                           <input type="text" name="linkedinUrl" class="form-control" placeholder="Enter your LinkedinUrl">
                         </div>
+                     <div class="col-lg-6">
+                        <label>E-mail:</label>
+                        <input type="text" name="ownerEmail" class="form-control" placeholder="Enter your Twitter Url">
+                     </div>
                      </div>
                      <br>
                      <div class="row">
                         <div class="col-lg-6">
                            <label>Phone number:</label>
-                           <input type="text" name="customerPhoneNumber" class="form-control" placeholder="Enter your phone number">
+                           <input type="text" name="customerPhoneNumber" class="form-control" placeholder="Enter your Phone Number">
                         </div>
                         <div class="col-lg-6">
                            <label>Password:</label>
@@ -84,7 +76,7 @@
                      </div>
                      <br>
                      <br>
-                     <input type="submit" name="submit" value="submit" class="btn btn-primary btn-block btn-lg">
+                     <input type="submit" name="submit" value="Submit" class="btn submitBtn btn-lg">
                   </form>
                </div>
             </div>
