--- a/views/Partials/navbar.ejs
+++ b/views/Partials/navbar.ejs
@@ -13,7 +13,27 @@
           <a class="nav-link" href="/explore/">Explore <span class="sr-only">(current)</span></a>
         </li>
       </ul>
-      <form action="/searchRestaurants/" method="POST" style="width:50%; float: right;" class="form-inline my-2 my-lg-0">
+      <ul class="navbar-nav mr-auto" style="float:right; margin-left: 22%;">
+        <li class="nav-item dropdown">
+          <a style="color: white" class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Login
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+            <a class="dropdown-item" href="/customerSignup/">Customer</a>
+            <a class="dropdown-item" href="#">Restaurant Owner</a>
+          </div>
+        </li>
+        <li class="nav-item dropdown">
+          <a style="color: white" class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Sign Up
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+            <a class="dropdown-item" href="/customerSignup/">Customer</a>
+            <a class="dropdown-item" href="/restaurantSignup/">Restaurant Owner</a>
+          </div>
+        </li>
+      </ul>
+      <form action="/searchRestaurants/" method="POST" style="width:43%; float: right;" class="form-inline my-2 my-lg-0">
         <input id="searchBar" name="searchContent" required="required" style="width:50% ; float: left;" class="form-control mr-sm-2" type="search" placeholder="What Are You Craving?" aria-label="Search">
         <select id="sorting" name="sortBy"  style="width: 30%; float: left;" class="form-control mr-sm-2">
             <option value="rel" selected>Relevance</option>
