--- a/views/Registration_Form.ejs
+++ b/views/Registration_Form.ejs
@@ -9,19 +9,7 @@
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-
-<style type="text/css">
-	#ui{
-		background-color: #333;
-		padding:30px;
-		margin-top: 20px;
-		border-radius: 10px;
-	}
-
-	#ui label, h1, h3{
-		color: #fff;
-	}
-</style>
+<link rel="stylesheet" href="/stylesheets/form.css">
 
 </head>
 <body>
@@ -31,10 +19,11 @@
 		<div class="row">
 			<div style="width: 100%">
 				<div id="ui">
-					<h1 class="text-center">REGISTRATION FORM</h1>
+					<h1 class="text-center">Restaurant Owner Sign Up</h1>
 					<br>
 					<form action="/makeRestaurant" method="POST" class="form-group">
-
+						<h2 class="subHeading">Restaurant Information</h2>
+						<br>
 						<div class="row">
 							<div class="col-lg-6">
 								<label>Restaurant:</label>
@@ -58,7 +47,7 @@
 						<label>Restaurant Tags (e.g "Burgers", "Chinese", etc. ). Separate tags using a comma:</label>
 						<input type="text" name="tags" class="form-control">
 						<br>
-						<h2 style="color: white;">Owner Information</h2>
+						<h2 class="subHeading">Owner Information</h2>
 						<br>
 
 						<div class="row">
@@ -104,7 +93,7 @@
 						<br>
 						<br>
 
-						<input required="required" type="submit" name="submit" value="Submit" class="btn btn-primary btn-block btn-lg">
+						<input required="required" type="submit" name="submit" value="Submit" class="btn btn-lg submitBtn">
 
 						
 					</form>
