--- a/views/search.ejs
+++ b/views/search.ejs
@@ -5,19 +5,24 @@
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-        <link rel="stylesheet" href="/stylesheets/landing.css">
+        <link rel="stylesheet" href="/stylesheets/search.css">
     </head>
 
-    <body>
+    <body style="overflow-x: hidden;">
             <%- include('./partials/navbar.ejs') %>
-            <br><br>
-            <h2 style="margin-left: 2%; font-weight: 500;">Search Results for: "<%= search %>" <span style="font-size: 0.7em; color: #636363">by <%= param %></span></h2>
-            <br>
+            <div class="container">
+                <img class="banner" src="/uploads/searchPage/banner.jpg" alt="Norway" style="width:100%;">
+                <div class="text-block">
+                <h2 id="bannerText">Search Results for: "<%= search %>" <span style="font-size: 0.7em; color: #d6d6d6">by <%= param %></span></h2>
+                </div>
+              </div>
+            <hr class="line">
+            <div style="margin-left: 6.5%; width: 100%">
             <% for(i = 0; i < rests.length ; i++) { %>
-                <div style="float: left; width: 25%; margin: 2% 2% 2% 2%; border: #999999 solid 1px; border-radius: 5px;">
+                <div class="restCard">
                     <a href="/<%= rests[i].nameSpaced.replace(/\s/g, '-')%>/restaurantProfile">
-                    <img src="https://www.w3schools.com/images/picture.jpg" style="height: 20%; width: 100%; object-fit: cover; margin-bottom: 2%;">
-                    <div style="padding: 1% 2% 1% 2%; color: #636363">
+                    <img class="cardImg" src="https://www.w3schools.com/images/picture.jpg">
+                    <div class="cardContent">
                         <h5 class="card-title"><%= rests[i].nameSpaced %></h5>
                         
                         <p class="card-text">
@@ -43,6 +48,7 @@
                     </a>
                 </div>
             <% } %>
+            </div>
         </div>
 
         <!-- CSS only for bootstrap--> 
