--- a/views/customerProfile.ejs
+++ b/views/customerProfile.ejs
@@ -13,11 +13,9 @@
       <div class="jumbotron ">
       <h1 class="display-10 text-center"><%= customerInfo.customerFirstName%> Profile </h1>
       <div class = "container d-flex flex-column justify-content-start">
-         <div class="view bg d-flex flex-row align-self-center">
-            <div class="d-flex align-self-end">
+            <div class="d-flex align-self-start">
                <img src="https://www.w3schools.com/images/picture.jpg" class ="rounded" alt="W3Schools.com" style=height:300%>
             </div>
-         </div>
       </div>
       <div class="card mt-3" style = "width: 70rem;">
          <div class = "card-body">
