--- a/views/customerProfile.ejs
+++ b/views/customerProfile.ejs
@@ -15,7 +15,7 @@
     <div class = "container d-flex flex-column justify-content-start">
       <div class="view bg d-flex flex-row align-self-center">
          <div class="d-flex align-self-end">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d8/Person_icon_BLACK-01.svg/1200px-Person_icon_BLACK-01.svg.png" alt="W3Schools.com" style=height:300%>
+            <img src="data:image/<%=customerInfo.image.contentType%>;base64, <%=customerInfo.image.data.toString('base64')%>" alt="W3Schools.com" style=height:300%>
          </div>
         </div>
       </div>
