--- a/views/Customer_Form.ejs
+++ b/views/Customer_Form.ejs
@@ -75,7 +75,7 @@
                                                   </div>
                         <div class="col-lg-6">
                            <label>E-mail:</label>
-                           <input type="email" name="ownerEmail" class="form-control" placeholder="Enter your email">
+                           <input type="email" name="customerEmail" class="form-control" placeholder="Enter your email">
                         </div>
                      </div>
                      <br>
