--- a/views/restaurant.ejs
+++ b/views/restaurant.ejs
@@ -32,7 +32,7 @@
             </h4>
             <div class =" d-flex flex-row align-items-start justify-content-around ">
                 <div class="card" style="width: 18rem;">
-                    <img class="card-img-top" src="data:image/<%=restaurant.image.contentType%>;base64, <%=restaurant.image.data.toString('base64')%>" alt="Card image cap" style="height:8em; object-fit: cover;">
+                    <img class="card-img-top" src="data:image/<%=restaurant.image.contentType%>;base64, <%=restaurant.image.data?restaurant.image.data.toString('base64'):""%>" alt="Card image cap" style="height:8em; object-fit: cover;">
                     <div class="card-body">
                         <div class="restaurantInfo restaurantInfoTitle">Phone Number</div>
                         <div class="restaurantInfo" class="card-text restaurantInfo"><%= restaurant.phoneNumber %></div>
@@ -41,7 +41,6 @@
                         <div class="restaurantInfo restaurantInfoTitle"> Restaurant Owner </div>
                         <div class="restaurantInfo" class="card-text restaurantInfo"><%= restaurant.title %> <%= restaurant.ownerFirstName %> <%= restaurant.ownerLastName %></div>
                         <br>
-                        <a class="btn btn-outline-primary btn-sm" href="#" role="button">More Info</a>
                         <a class="btn btn-outline-primary btn-sm" href="/restaurantSignup/" role="button">Edit Profile</a>
                         <a class="btn btn-outline-primary btn-sm" href="/<%=restaurant._id%>/reviews?p=1" role="button">Reviews</a>
                     </div>
