--- a/views/reviews.ejs
+++ b/views/reviews.ejs
@@ -95,7 +95,7 @@
         <div class="row justify-content-end">
             <a role="button" class="btn btn-outline-dark btn-sm mr-1 <% if (page <= 1) {%> disabled <% }; %>"
                 href="/<%=restaurant._id%>/reviews?p=<%=Number(page)-1%>">Last Page</a>
-            <%=page%> of <%=Math.ceil(restaurant.reviews.length / 10)%>
+                <%=restaurant.reviews.length>0?page:0%> of <%=Math.ceil(restaurant.reviews.length / 10)%>
             <a role="button"
                 class="btn btn-outline-dark btn-sm ml-1 <% if (page >= Math.ceil(restaurant.reviews.length / 10)) {%> disabled <% }; %>"
                 href="/<%=restaurant._id%>/reviews?p=<%=Number(page)+1%>">Next Page</a>
