--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -29,7 +29,7 @@
                         <% if(restaurant.foodItems[j]._id == cart.cartItems[i].foodItemId){ %>
                             <% var food = restaurant.foodItems[j]; %>
                             <li class="media mt-1 food-item container justify-content-start" style="height:6em;">
-                                <img class="mr-3 row align-self-start h-100" src="data:image/<%=food.image.contentType%>;base64, <%=food.image.data.toString('base64')%>" alt="Tmp Img" width="70em">
+                                <img class="mr-3 row align-self-start h-100" src="data:image/<%=food.image.contentType%>;base64, <%=food.image.data?food.image.data.toString('base64'):""%>" alt="Tmp Img" width="70em">
                                 <div class="media-body row justify-content-between align-items-center h-100 no-gutters">
                                     <div class="col-9">
                                         <h3 class="mt-0"><%=food.name%> | $<%=food.price.toFixed(2)%> </h3>
