--- a/views/StoriesForm.ejs
+++ b/views/StoriesForm.ejs
@@ -19,7 +19,7 @@
 					<div class="row justify-content-between mb-4">
 						<div class="col-8">
 							<h6 class="text-center">Write the body of your post here.</h6>
-							<textarea style="width:100%; height:16em;" name="bodyText"></textarea>
+							<textarea style="width:100%; height:16em;" required="required" name="bodyText"></textarea>
 						</div>
 						<div class="col-4 align-self-end">
 							<h6 class="text-center">[Optional] Upload an image to go along with your post.</h6>
