--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -17,13 +17,11 @@
             <p>New or Returning user?</p>
             <span id="customerBtns">
                 <a class="btn btn-primary" href="/customerSignup/"  role="button">Customer Sign Up</a>
-                <a class="btn btn-success" data-toggle="modal" data-target="#loginModal" href="/" role="button">Customer Login In</a>
-                <%- include('./partials/loginCustomer.ejs') %>
+                <a class="btn btn-success"  href="/loginCustomer" role="button">Customer Login In</a>
             </span>
             <span id="restaurantBtns">
                 <a class="btn btn-primary" href="/restaurantSignup/" role="button">Restaurant Sign Up</a>
-                <a class="btn btn-success" data-toggle="modal" data-target="#loginModal" href="/" role="button">Restaurant Login In</a>
-                <%- include('./partials/loginRestaurant.ejs') %>
+                <a class="btn btn-success"  href="/loginRestaurant" role="button">Restaurant Login In</a>
             </span>
         </div>
         <!-- CSS only for bootstrap--> 
