--- a/public/stylesheets/profilePage.css
+++ b/public/stylesheets/profilePage.css
@@ -35,3 +35,47 @@ body, html {
     text-decoration: underline;
     font-weight: 500;
 }
+
+.restCard{
+  display: inline-block; 
+  width: 45%; 
+  margin: 0.5% 2% 0.5% 2%; 
+  border: #999999 solid 0.5px; 
+  border-radius: 5px;
+}
+
+.restCardImg{
+  height: 30%; 
+  width: 100%; 
+  object-fit: cover; 
+  margin-bottom: 2%;
+}
+
+.restCardText {
+  padding: 1% 2% 1% 2%;
+  color: #636363;
+  overflow-x: hidden;
+  height: 3em;
+}
+
+.scrollable {
+  width: 100%; 
+  height:45%; 
+  overflow-x: scroll; 
+  overflow-x: auto; 
+  overflow-y: hidden; 
+  white-space: nowrap; 
+  margin: 2% 0% 2% 0%
+}
+
+.scrollable::-webkit-scrollbar {
+  width: 12px;               /* width of the entire scrollbar */
+}
+.scrollable::-webkit-scrollbar-track {
+  background: #e3e8eb;        /* color of the tracking area */
+}
+.scrollable::-webkit-scrollbar-thumb {
+  background-color: rgb(168, 170, 179);    /* color of the scroll thumb */
+  border-radius: 20px;       /* roundness of the scroll thumb */
+  border: 3px solid #e3e8eb;  /* creates padding around scroll thumb */
+}
