--- a/views/explore.ejs
+++ b/views/explore.ejs
@@ -14,7 +14,9 @@
             <% for(i = 0; i < rests.length ; i++) { %>
                 <div class="restCard">
                     <a href="/<%=rests[i]._id%>/restaurantProfile">
-                    <img class="restCardImg" src="https://www.w3schools.com/images/picture.jpg">
+                        <object style="width: 100%" data="/uploads/default/restaurantPhoto<%= rests[i].pricing%>.png" type="image/png">
+                            <img class="card-img-top" src="data:image/<%=restaurant.image.contentType%>;base64, <%=restaurant.image.data?restaurant.image.data.toString('base64'):""%>" alt="Card image cap" style="height:8em; object-fit: cover;">
+                        </object>
                         <div class="restCardText">
                             <h5 class="card-title"><%= rests[i].nameSpaced %></h5>
                             
